# Blurify

./: .gitignore  CHANGELOG.md  Dockerfile  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_blurify.bat  run_blurify.ps1  setup_blurify.bat  setup_blurify.ps1  setup_d_drive.py  streamlit_app.py  test_blurify.bat  test_blurify.ps1
.github/workflows/: ci.yml
.streamlit/: config.toml
blurify/: __init__.py  cli.py  config.py  context_filter.py  detector.py  logger.py  mock_ocr.py  ocr.py  pdf_utils.py  redactor.py  synthetic_data.py  visual_detector.py
tests/: test_detector.py  test_eval.py  test_ocr.py
